--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.admin.royalenfield" >
+    package="com.example.admin.royalenfield">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/logomain"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".misc.SplashScreen"
             android:label="@string/app_name"
@@ -20,13 +20,15 @@
         <activity
             android:name=".NavMainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".BikeList.MotorCycleList"
             android:label="@string/page_bike"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".BikeList.BikeViewActivity"
+            android:label="@string/page_bike"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
