Android Viewpager added for History section
Android viewpager with 7 tabs have been added for History section, it
will open a new activity -HistoryActivity on click of History option in
Navigation Drawer. Working like a charm.. :+1:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".BikeList.BikeViewActivity"
             android:label="@string/page_bike"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".History.HistoryActivity"
+            android:label="@string/history"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
