Updated UI and added sqlite db for backend operations
UI updated
*Slide show in About tab
*Good UI in Motorcycle tab
*New design for MyDetails tab
*new images added for slideshow.
*Navigation drawer xml's changed for vibrant UI

SQLite database configured for saving and viewing details.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:name=".History.HistoryActivity"
             android:label="@string/history"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".fragments.PersonalDetailsFragment"
+            android:label="@string/PersonalDetails"
+            android:screenOrientation="portrait"></activity>
+
     </application>
 
 </manifest>
