Fragment MyTrip tab added
MyTripFragment.class, PlanTripDetails.class, ViewTripDetails.class,
fragment_mytrip.xml, activity_tofrom.xml, tab_frag_tofrom are the new
files added for mytrip tab. Kindly use google maps api's to finish the
functionalities by this week.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,14 @@
             android:name=".fragments.PersonalDetailsFragment"
             android:label="@string/PersonalDetails"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".fragments.PlanTripDetails"
+            android:label="@string/plan"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".fragments.ViewTripDetails"
+            android:label="@string/view"
+            android:screenOrientation="portrait"></activity>
 
     </application>
 
