Package name changed from example to reft
As the default package name is com.example which is not allowed for
apps, changed the package to com.reft. Also Nearest gas station json
parsing and populating to listview is over. Latest APK will support both
portrait and landscape views. Have uploaded the same for Alpha Testing
in Google Play Store :+1:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.admin.royalenfield">
+    package="com.reft.admin.royalenfield">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,7 +14,7 @@
         <activity
             android:name=".misc.SplashScreen"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,31 +24,35 @@
         <activity
             android:name=".NavMainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
         <activity
             android:name=".BikeList.BikeViewActivity"
             android:label="@string/page_bike"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
         <activity
             android:name=".History.HistoryActivity"
             android:label="@string/history"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
         <activity
             android:name=".fragments.PersonalDetailsFragment"
             android:label="@string/PersonalDetails"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
         <activity
             android:name=".fragments.PlanTripDetails"
             android:label="@string/plan"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
         <activity
             android:name=".fragments.ViewTripDetails"
             android:label="@string/view"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
         <activity
             android:name=".fragments.ViewAllActivity"
             android:label="@string/viewAll"
-            android:screenOrientation="portrait"></activity>
+            ></activity>
+        <activity
+            android:name=".fragments.SpecsActivity"
+            android:label="@string/techspec"
+            ></activity>
 
     </application>
 
