--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.reft.admin.royalenfield"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 4
-        versionName "1.3"
+        versionCode 6
+        versionName "1.5"
     }
     buildTypes {
         release {
@@ -22,4 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:22.2.1'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
