--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".misc.SplashScreen"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,34 +25,42 @@
         <activity
             android:name=".NavMainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".BikeList.BikeViewActivity"
             android:label="@string/page_bike"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".History.HistoryActivity"
             android:label="@string/history"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".fragments.PersonalDetailsFragment"
             android:label="@string/PersonalDetails"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".fragments.PlanTripDetails"
             android:label="@string/plan"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".fragments.ViewTripDetails"
             android:label="@string/view"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".fragments.ViewAllActivity"
             android:label="@string/viewAll"
+            android:configChanges="orientation|screenSize"
             ></activity>
         <activity
             android:name=".fragments.SpecsActivity"
             android:label="@string/techspec"
+            android:configChanges="orientation|screenSize"
             ></activity>
 
     </application>
