--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".misc.SplashScreen"
-            android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
-            >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,44 +23,36 @@
         </activity>
         <activity
             android:name=".NavMainActivity"
-            android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".BikeList.BikeViewActivity"
-            android:label="@string/page_bike"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/page_bike"></activity>
         <activity
             android:name=".History.HistoryActivity"
-            android:label="@string/history"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/history"></activity>
         <activity
             android:name=".fragments.PersonalDetailsFragment"
-            android:label="@string/PersonalDetails"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/PersonalDetails"></activity>
         <activity
             android:name=".fragments.PlanTripDetails"
-            android:label="@string/plan"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/plan"></activity>
         <activity
             android:name=".fragments.ViewTripDetails"
-            android:label="@string/view"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/view"></activity>
         <activity
             android:name=".fragments.ViewAllActivity"
-            android:label="@string/viewAll"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/viewAll"></activity>
         <activity
             android:name=".fragments.SpecsActivity"
-            android:label="@string/techspec"
             android:configChanges="orientation|screenSize"
-            ></activity>
+            android:label="@string/techspec"></activity>
 
     </application>
 
