--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
+    compileSdkVersion 23
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "com.reft.admin.ridersdelight"
         minSdkVersion 14
-        targetSdkVersion 21
-        versionCode 12
-        versionName "2.1"
+        targetSdkVersion 23
+        versionCode 14
+        versionName "2.1.2"
     }
     buildTypes {
         release {
@@ -21,7 +21,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.google.android.gms:play-services:8.3.0'
-    compile files('libs/pinchzoom.jar')
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
 }
