--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission
+        android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -24,36 +35,35 @@
         <activity
             android:name=".NavMainActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".BikeList.BikeViewActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/page_bike"></activity>
+            android:label="@string/page_bike" />
         <activity
             android:name=".History.HistoryActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/history"></activity>
+            android:label="@string/history" />
         <activity
             android:name=".fragments.PersonalDetailsFragment"
             android:configChanges="orientation|screenSize"
-            android:label="@string/PersonalDetails"></activity>
+            android:label="@string/PersonalDetails" />
         <activity
             android:name=".fragments.PlanTripDetails"
             android:configChanges="orientation|screenSize"
-            android:label="@string/plan"></activity>
+            android:label="@string/plan" />
         <activity
             android:name=".fragments.ViewTripDetails"
             android:configChanges="orientation|screenSize"
-            android:label="@string/view"></activity>
+            android:label="@string/view" />
         <activity
             android:name=".fragments.ViewAllActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/viewAll"></activity>
+            android:label="@string/viewAll" />
         <activity
             android:name=".fragments.SpecsActivity"
             android:configChanges="orientation|screenSize"
-            android:label="@string/techspec"></activity>
-
+            android:label="@string/techspec" />
     </application>
 
 </manifest>
