App intro page added, google maps called inside app
App intro page added, google maps called inside app for user to view.
Minor code modifications and apk released in production.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,9 +61,20 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/viewAll" />
         <activity
+            android:name=".misc.WebViewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:theme="@style/TranslucentActivityStyle"/>
+
+        <activity
             android:name=".fragments.SpecsActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/techspec" />
+        <activity
+            android:name=".misc.MyIntro"
+            android:label="Welcome"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
     </application>
 
 </manifest>
