--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.reft.admin.ridersdelight"
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 17
-        versionName "2.1.5"
+        versionCode 20
+        versionName "2.1.8"
     }
     buildTypes {
         release {
@@ -25,4 +25,9 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
+    compile "com.squareup.picasso:picasso:2.4.0"
+    compile 'com.github.paolorotolo:appintro:3.4.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
